Java GC tuning options (cherry picked from commit a012ed2baf6c4837584d24de719b8101e16977ee)