@@ -39,6 +39,8 @@
 # For more on why as well as other possible settings,
 # see http://wiki.apache.org/hadoop/PerformanceTuning
 export HBASE_OPTS="-XX:+UseConcMarkSweepGC"
+# and http://www.scribd.com/doc/37127094/GCTuningPresentationFISL10
+export HBASE_OPTS="$HBASE_OPTS -XX:+UseParNewGC -XX:NewRatio=16 -XX:CMSInitiatingOccupancyFraction=70 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=100"
 
 # Uncomment one of the below three options to enable java garbage collection logging for the server-side processes.
 
